--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "lodash": "^4.17.15",
     "next": "latest",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "styled-components": "^5.0.0"
+    "styled-components": "^5.0.0",
+    "sweetalert2": "^9.10.12"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.150",
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "@types/styled-components": "5.0.1",
     "babel-plugin-styled-components": "^1.10.0",
-    "typescript": "3.5.2"
+    "typescript": "3.8.3"
   },
   "license": "ISC"
 }
